--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySqlConex":"server=localhost;user=root;password=123456;database=jardineria"
-  }
+    "DefaultConnection": "server=localhost;"
+  },
+  "AllowedHosts": "*"
 }
